--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@pusher/chatkit": "^0.7.18",
     "immutable": "^4.0.0-rc.12",
     "node-sass-chokidar": "^1.3.3",
     "npm-run-all": "^4.1.3",
